--- a/index.html
+++ b/index.html
@@ -29,23 +29,62 @@
       font-weight: bold;
     }
     .container {
-      max-width: 900px;
+      max-width: 1100px;
       margin: auto;
       padding: 1rem;
+    }
+    .hero {
       text-align: center;
+      padding: 2rem 1rem;
+    }
+    .hero img {
+      max-width: 100%;
+      border-radius: 10px;
+    }
+    .features {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      margin: 2rem 0;
+    }
+    .feature {
+      flex: 1 1 calc(33% - 1rem);
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    .feature img {
+      width: 60px;
+      margin-bottom: 1rem;
+    }
+    .gallery {
+      margin: 2rem 0;
+    }
+    .gallery h2 {
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+    .gallery-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
+    }
+    .gallery-grid img {
+      width: 100%;
+      border-radius: 8px;
     }
     footer {
       background: #333;
       color: white;
       text-align: center;
       padding: 1rem;
-      position: fixed;
-      width: 100%;
-      bottom: 0;
+      margin-top: 2rem;
     }
-    @media (max-width: 600px) {
-      nav {
-        flex-direction: column;
+    @media (max-width: 768px) {
+      .feature {
+        flex: 1 1 100%;
       }
     }
   </style>
@@ -61,8 +100,42 @@
   </nav>
 
   <div class="container">
-    <h2>About This Project</h2>
-    <p>This is a simple DevOps CI/CD practice project demonstrating responsive web design with plain HTML, CSS, and JavaScript.</p>
+    <!-- Hero Section -->
+    <section class="hero">
+      <h2>Automate, Build, Deploy</h2>
+      <p>Learn the fundamentals of DevOps CI/CD with real-world examples.</p>
+      <img src="https://picsum.photos/900/300" alt="CI/CD Pipeline Banner">
+    </section>
+
+    <!-- Features Section -->
+    <section class="features">
+      <div class="feature">
+        <img src="https://img.icons8.com/color/96/000000/github.png" alt="GitHub">
+        <h3>Source Control</h3>
+        <p>Manage your code with Git and GitHub for efficient collaboration.</p>
+      </div>
+      <div class="feature">
+        <img src="https://img.icons8.com/color/96/000000/jenkins.png" alt="CI/CD">
+        <h3>Continuous Integration</h3>
+        <p>Automated pipelines with GitHub Actions and Jenkins.</p>
+      </div>
+      <div class="feature">
+        <img src="https://img.icons8.com/color/96/000000/docker.png" alt="Docker">
+        <h3>Containerization</h3>
+        <p>Use Docker to build and ship applications faster.</p>
+      </div>
+    </section>
+
+    <!-- Gallery Section -->
+    <section class="gallery">
+      <h2>Project Snapshots</h2>
+      <div class="gallery-grid">
+        <img src="https://picsum.photos/400/250?random=1" alt="Project 1">
+        <img src="https://picsum.photos/400/250?random=2" alt="Project 2">
+        <img src="https://picsum.photos/400/250?random=3" alt="Project 3">
+        <img src="https://picsum.photos/400/250?random=4" alt="Project 4">
+      </div>
+    </section>
   </div>
 
   <footer>
